js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-typeof-import.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
{
typeof
import
;
}
